--- a/src/app/pages/login-lion/login-lion.component.html
+++ b/src/app/pages/login-lion/login-lion.component.html
@@ -13,20 +13,21 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-10 ">
-                <form>
+                <form [formGroup]="logForm" (submit)="submitLogIn()">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        <input formControlName="logEmail" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                             placeholder="Enter email">
                     </div>
                     <br>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        <input formControlName="logPassword" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                     </div>
                     <br>
                     <button type="submit" id="log" class="btn btn-primary">Submit</button>
                 </form>
+
                 <a href="forgotPassword">Forgot password?</a>
 
                 <br><br><br>
