--- a/src/app/moduleAdmin/pages/UserSection/user-modify/user-modify.component.html
+++ b/src/app/moduleAdmin/pages/UserSection/user-modify/user-modify.component.html
@@ -27,8 +27,9 @@
 
       </form>
 
-      <div class="d-grid gap-2 d-md-flex justify-content-md-start mx-5 mt-5">
-        <button routerLink="/admin/users" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Retour</button>
+      <div class="d-grid gap-2 d-md-flex justify-content-start mt-5">
+        <button routerLink="/admin/users" type="button" class="btn btn-secondary btn-lg px-4 me-md-2">Retour</button>
+        <button type="button" class="btn btn-success btn-lg px-4 me-md-2" (click)="modifyUser()">Modifier</button>
       </div>
     </div>
   </div>
