--- a/src/app/moduleAdmin/component/sidebar-dashboard/sidebar-dashboard.component.html
+++ b/src/app/moduleAdmin/component/sidebar-dashboard/sidebar-dashboard.component.html
@@ -1,32 +1,32 @@
 <div class="col-2 sidenav  custom-navbar flex-column ">
   <ul class="nav nav-underline flex-column">
     <li class="nav-item mb-3">
-      <a routerLink="/admin/indexAdmin" routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/indexAdmin')" >
+      <a routerLink="/admin/indexAdmin" routerLinkActive="active" class="nav-link link-body-emphasis"  >
         <img class="icon me-2" src="/assets/admin/assets/svgIcon/house.svg" alt="Home"> Accueil
       </a>
     </li>
     <li class="nav-item mb-3">
-      <a routerLink="/admin/products"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/catalogue')">
+      <a routerLink="/admin/products"  routerLinkActive="active" class="nav-link link-body-emphasis">
         <img class="icon me-2" src="/assets/admin/assets/svgIcon/pc-display.svg" alt="Catalogue"> Catalogue des Produits
       </a>
     </li>
     <li class="nav-item mb-3">
-      <a routerLink="/admin/categories"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/categories')">
+      <a routerLink="/admin/categories"  routerLinkActive="active" class="nav-link link-body-emphasis" >
         <img class="icon me-2" src="/assets/admin/assets/svgIcon/collection.svg" alt="Categories"> Categories
       </a>
     </li>
     <li class="nav-item mb-3">
-      <a routerLink="/admin/orders"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/commande')">
+      <a routerLink="/admin/orders"  routerLinkActive="active" class="nav-link link-body-emphasis">
         <img class="icon me-2" src="/assets/admin/assets/svgIcon/bag.svg" alt="Orders"> Liste des commandes
       </a>
     </li>
     <li class="nav-item mb-3">
-      <a routerLink="/admin/users"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/registreUtilisateur')">
+      <a routerLink="/admin/users"  routerLinkActive="active" class="nav-link link-body-emphasis">
         <img class="icon me-2" src="/assets/admin/assets/svgIcon/people.svg" alt="Users"> Registre des Utilisateurs
       </a>
     </li>
     <li class="nav-item mb-3">
-      <a routerLink="/admin/stores"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('/admin/magasin')">
+      <a routerLink="/admin/stores"  routerLinkActive="active" class="nav-link link-body-emphasis">
         <img class="icon me-2" src="/assets/admin/assets/svgIcon/buildings.svg" alt="Shops"> Gestion des Magasins
       </a>
     </li>
@@ -35,13 +35,13 @@
     <hr class="mb-4 mt-5">
     <ul class="nav nav-pills flex-column">
       <li class="nav-item">
-        <a href="#" class="nav-link link-body-emphasis" data-bs-toggle="modal" data-bs-target="#modalParametre">
+        <a routerLink="/admin/parameter" class="nav-link link-body-emphasis" data-bs-toggle="modal" data-bs-target="#modalParametre">
           <img src="/assets/admin/assets/svgIcon/gear.svg" alt="Settings" class="icon-nav me-2"> Paramètre
         </a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link link-body-emphasis mt-3">
-          <img src="/assets/admin/assets/leave-3.svg" alt="Logout" class="icon-nav me-2"> Déconnections
+        <a routerLink="/home" class="nav-link link-body-emphasis mt-3">
+          <img src="/assets/admin/assets/leave-3.svg" alt="Logout" class="icon-nav me-2" routerLink="home"> Déconnections
         </a>
       </li>
     </ul>
