--- a/src/app/shared/header-jean/header.component.html
+++ b/src/app/shared/header-jean/header.component.html
@@ -20,7 +20,7 @@
         </div>
         <!--Buttons top-right of page-->
         <div class="d-none d-md-flex gap-5">
-            <a class="btnIcon text-center" href="">
+            <a routerLink="/stores" class="btnIcon text-center" href="">
                 <img class="imgIcon" src="assets/images/icons/Shop.svg" alt="store_icon">
                 <div class="txtIcon">Stores</div>
             </a>
@@ -78,6 +78,7 @@
     <div class="text-center d-flex flex-column mt-5 p-2 align-items-center gap-4">
 
         <!--Il nous restera a implementer le about us une fois la page fait-->
+        <a  routerLink="/stores" class="text-reset" data-bs-dismiss="offcanvas">Find a Store</a>
         <a href="#!" class="text-reset" data-bs-dismiss="offcanvas">About Us</a>
         <a routerLink="/support" class="text-reset" data-bs-dismiss="offcanvas">Contact Us</a>
         <a routerLink="/home" data-bs-dismiss="offcanvas">
