--- a/src/app/pages/detail-product-jean/detail-product-child-jean/tab-detail-jean/tab-detail-jean.component.html
+++ b/src/app/pages/detail-product-jean/detail-product-child-jean/tab-detail-jean/tab-detail-jean.component.html
@@ -1,11 +1,11 @@
 <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
-        <button class="nav-link active" id="description-tab" data-bs-toggle="tab"
-            data-bs-target="#description" type="button" role="tab">Description</button>
-        <button class="nav-link" id="specifications-tab" data-bs-toggle="tab"
-            data-bs-target="#specifications" type="button" role="tab">Specifications</button>
-        <button class="nav-link" id="reviews-tab" data-bs-toggle="tab" data-bs-target="#reviews"
-            type="button" role="tab">Reviews</button>
+        <button class="nav-link active" id="description-tab" data-bs-toggle="tab" data-bs-target="#description"
+            type="button" role="tab">Description</button>
+        <button class="nav-link" id="specifications-tab" data-bs-toggle="tab" data-bs-target="#specifications"
+            type="button" role="tab">Specifications</button>
+        <button class="nav-link" id="reviews-tab" data-bs-toggle="tab" data-bs-target="#reviews" type="button"
+            role="tab">Reviews</button>
     </div>
 </nav>
 <div class="tab-content" id="nav-tabContent">
@@ -14,59 +14,12 @@
     </div>
     <div class="tab-pane" id="specifications" role="tabpanel">
         <div class="specsSection">
-            <table class="table specsTable">
-                <tbody>
-                    <!-- todo gerer les tableau de spec a 3 colones -->
-                    <!-- <div *ngFor="let spec of product?.specificationDetails">
-                        <tr>
-                            <th>{{spec.title}}</th>
-                        </tr>
-                        <tr>
-                            <td>{{spec.description}}</td>
-                        </tr>
-                    </div> -->
-                    <tr>
-                        <th>Size [Inch]</th>
-                        <th>Resolution</th>
-                        <th>Connection</th>
-                    </tr>
-                    <tr>
-                        <td>17</td>
-                        <td>1280 x 720</td>
-                        <td>HDMI (x1) USB Type-A (x2)</td>
-                    </tr>
-                    <tr>
-                        <th>Panel Type</th>
-                        <th>Aspect Ratio</th>
-                        <th>AC Imput</th>
-                    </tr>
-                    <tr>
-                        <td>IPS</td>
-                        <td>16:9</td>
-                        <td>100 - 240V (50/60Hz)</td>
-                    </tr>
-                    <tr>
-                        <th>Color Gamut (typ)</th>
-                        <th>Brightness (Typ.) [cd/m2]</th>
-                        <th>AMD FreeSync</th>
-                    </tr>
-                    <tr>
-                        <td>NTSC 72% (CIE1931)</td>
-                        <td>250</td>
-                        <td>Yes</td>
-                    </tr>
-                    <tr>
-                        <th>Refresh Rate (Max.) [Hz]</th>
-                        <th>Response Time</th>
-                        <th>Wall Mountable [mm]</th>
-                    </tr>
-                    <tr>
-                        <td>75</td>
-                        <td>5ms (GtG at Faster)</td>
-                        <td>75 x 75</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="row">
+                <div class="col-4" *ngFor="let spec of product?.specificationDetails">
+                    <h5 class="">{{spec.title}}</h5>
+                    <p class="text-muted"> {{spec.description}} </p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="reviewSection tab-pane" id="reviews" role="tabpanel">
