correction des shortcut cat

--- a/src/app/pages/detail-product-jean/detail-product-child-jean/tab-detail-jean/tab-detail-jean.component.html
+++ b/src/app/pages/detail-product-jean/detail-product-child-jean/tab-detail-jean/tab-detail-jean.component.html
@@ -16,8 +16,8 @@
         <div class="specsSection">
             <div class="row">
                 <div class="col-4" *ngFor="let spec of product?.specificationDetails">
-                    <h5 class="">{{spec.title}}</h5>
-                    <p class="text-muted"> {{spec.description}} </p>
+                    <h5 class="fw-bold mb-0">{{spec.title}}</h5>
+                    <p class="fw-light"> {{spec.description}} </p>
                 </div>
             </div>
         </div>
