--- a/src/app/pages/tracking-order-matt/tracking-order/tracking-order.component.html
+++ b/src/app/pages/tracking-order-matt/tracking-order/tracking-order.component.html
@@ -39,8 +39,8 @@
         </div> 
         <div class="mb-3">
             <label class="form-label">Merci encore de votre confiance en JX-HiFi!</label>
-            <img src="image.pnj" alt="Image 3" style="width: 100%; max-width: 125px; height: 100px;">
-            <!--image de JX-HiFi-->
+            <img src="/assets/images/logo/Logo JX-HIFI.png" alt="Image 3" style="width: 100%; max-width: 125px; height: 100px;">
+            
         </div>
 
         <button type="submit" class="btn btn-primary width">Confirmer le suivi</button>
