--- a/src/app/moduleAdmin/pages/OrderSection/order-modify/order-modify.component.html
+++ b/src/app/moduleAdmin/pages/OrderSection/order-modify/order-modify.component.html
@@ -54,10 +54,10 @@
               <th>Action</th>
             </tr>
             </thead>
-            <tbody>
+           <tbody>
             <tr *ngFor="let product of order.orderItems; let i = index">
               <td>
-                <input type="text" class="form-control" [(ngModel)]="product.product.name" name="produit-{{i}}" required>
+                <input type="text" placeholder="Enter product name or ID" class="form-control" [(ngModel)]="product.product.name" name="produit-{{i}}" required>
               </td>
               <td>
                 <input type="number" class="form-control" [(ngModel)]="product.quantity" name="quantité-{{i}}" min="1" required>
