Remove home links and redirect to products
Commented out the "Home" navigation links in the Off-Canvas and Sidebar dashboards. Updated the default admin route to redirect to the "products" page instead of the "indexAdmin" page. This ensures a streamlined user experience by directing admins directly to the product catalogue.

--- a/src/app/moduleAdmin/component/sidebar-dashboard/sidebar-dashboard.component.html
+++ b/src/app/moduleAdmin/component/sidebar-dashboard/sidebar-dashboard.component.html
@@ -1,11 +1,11 @@
 <div class="col-2 sidenav  custom-navbar flex-column ">
   <ul class="nav nav-underline flex-column">
-    <li class="nav-item mb-3">
+   <!-- <li class="nav-item mb-3">
       <a routerLink="/admin/indexAdmin" routerLinkActive="active" class="nav-link link-body-emphasis"  >
         <img class="icon me-2" src="/assets/admin/assets/svgIcon/house.svg" alt="Home"> Accueil
       </a>
-    </li>
-    <li class="nav-item mb-3">
+    </li>-->
+    <li class="nav-item mt-5 mb-3">
       <a routerLink="/admin/products"  routerLinkActive="active" class="nav-link link-body-emphasis">
         <img class="icon me-2" src="/assets/admin/assets/svgIcon/pc-display.svg" alt="Catalogue"> Catalogue des Produits
       </a>
