--- a/src/app/moduleAdmin/component/off-caneva-dashboard/off-caneva-dashboard.component.html
+++ b/src/app/moduleAdmin/component/off-caneva-dashboard/off-caneva-dashboard.component.html
@@ -5,11 +5,11 @@
   </div>
   <div class="offcanvas-body">
     <ul class="nav nav-underline flex-column">
-      <li class="nav-item mb-3">
+   <!--   <li class="nav-item mb-3">
         <a routerLink="/admin/indexAdmin" routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/indexAdmin')" >
           <img class="icon me-2" src="/assets/admin/assets/svgIcon/house.svg" alt="Home"> Accueil
         </a>
-      </li>
+      </li>-->
       <li class="nav-item mb-3">
         <a routerLink="/admin/products"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/catalogue')">
           <img class="icon me-2" src="/assets/admin/assets/svgIcon/pc-display.svg" alt="Catalogue"> Catalogue des Produits
