further evolution on findStore page

--- a/src/app/pages/findStore-lion/find-store/find-store.component.html
+++ b/src/app/pages/findStore-lion/find-store/find-store.component.html
@@ -1,5 +1,19 @@
 <div class="container-fluid p-0 m-0">
-    <div class="row g-0" #mapBanner>
+    <div class="row g-0">
         <img src="assets/images/findStore/findStoreMap.jpg" class="store-map">
     </div>
+    <div id="divH" class="row g-0 d-flex justify-content-center">
+        <h1 id="find">Find a store</h1>
+    </div>
+
+    <div class="row g-0 d-flex justify-content-center">
+        <div class="col-4">
+            <div class="input-group mb-3">
+                <input placeholder="Search here" class="form-control" type="text">
+                <button class="btn btn-primary">FIND</button>
+            </div>
+        </div>
+    </div>
+
+    <div>CARDS WITH STORE INFO</div>
 </div>
