--- a/src/app/pages/findStore-lion/find-store/find-store.component.css
+++ b/src/app/pages/findStore-lion/find-store/find-store.component.css
@@ -2,16 +2,32 @@
     height: 100vh;
     margin:0;
     padding:0;
-
 }
-
-
 
 .store-map{
     width: 100%;
     height: 250px;
     object-fit:cover;
-    filter: brightness(0.8);
+    filter: brightness(0.6);
     opacity: 0.8;
 
+}
+
+
+#find{
+    width: auto;
+    position:relative;
+    bottom: 150px;
+    font-size: 60px;
+    color: rgb(213, 229, 255);
+    font-weight: bold;
+}
+
+.input-group{
+    height: 50px;
+    border: 5px solid #007bff; 
+    border-radius: 5px;
+}
+.btn{
+    border-radius: 0;
 }
