Implement product search with autocomplete in order modify
Added an autocomplete dropdown to the product name input field in the order modification page. Updated the product service to include a search method and adjusted component logic to handle product selection from the dropdown.

--- a/src/app/moduleAdmin/pages/OrderSection/order-delete/order-delete.component.html
+++ b/src/app/moduleAdmin/pages/OrderSection/order-delete/order-delete.component.html
@@ -1,6 +1,6 @@
 <div class="main-content-wrapper text-center">
   <div class="p-4 row flex-lg-row align-items-center g-5 py-5">
-    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Commande:{{order?.id}}</h1>
+    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Commande:{{order.id}}</h1>
     <div class="col-lg-6 mx-auto">
 
       <div >
