--- a/src/app/moduleAdmin/pages/OrderSection/order-modify/order-modify.component.css
+++ b/src/app/moduleAdmin/pages/OrderSection/order-modify/order-modify.component.css
@@ -1,5 +1,25 @@
 .main-content-wrapper{
   background: #F2F4FA;
 }
+.autocomplete-dropdown {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  border: 1px solid #ccc;
+  max-height: 150px;
+  overflow-y: auto;
+  background: white;
+  position: absolute;
+  z-index: 1000;
+  width: 100%;
+}
 
+.autocomplete-dropdown li {
+  padding: 5px;
+  cursor: pointer;
+}
+
+.autocomplete-dropdown li:hover {
+  background-color: #eee;
+}
 
