Add "Modify" buttons to all detail components
Added a "Modifier" button next to the "Retour" button for order, category, user, product, and store detail components. This button links to the respective modify page using the item's ID for easier navigation and updates. Updated some "Retour" buttons to use a secondary style for better visual distinction.

--- a/src/app/moduleAdmin/pages/UserSection/user-detail/user-detail.component.html
+++ b/src/app/moduleAdmin/pages/UserSection/user-detail/user-detail.component.html
@@ -10,6 +10,7 @@
       </ul>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start mx-5 mt-5">
         <button routerLink="/admin/users" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Retour</button>
+        <button routerLink="/admin/users/modify/{{user.id}}" type="button" class="btn btn-info btn-lg px-4 me-md-2">Modifier</button>
       </div>
     </div>
   </div>
