--- a/src/app/moduleAdmin/pages/CategorySection/categories-detail/categories-detail.component.html
+++ b/src/app/moduleAdmin/pages/CategorySection/categories-detail/categories-detail.component.html
@@ -9,7 +9,8 @@
         </li>
       </ul>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start mx-5 mt-5">
-        <button routerLink="/admin/categories" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Retour</button>
+        <button routerLink="/admin/categories" type="button" class="btn btn-secondary btn-lg px-4 me-md-2">Retour</button>
+        <button routerLink="/admin/categories/modify/{{category.id}}" type="button" class="btn btn-info btn-lg px-4 me-md-2">Modifier</button>
       </div>
     </div>
   </div>
