--- a/src/app/moduleAdmin/pages/OrderSection/order-detail/order-detail.component.html
+++ b/src/app/moduleAdmin/pages/OrderSection/order-detail/order-detail.component.html
@@ -25,6 +25,7 @@
       </ng-template>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start mx-5 mt-5">
         <button routerLink="/admin/orders" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Retour</button>
+        <button routerLink="/admin/orders/modify/{{order.id}}" type="button" class="btn btn-info btn-lg px-4 me-md-2">Modifier</button>
       </div>
     </div>
   </div>
