--- a/src/app/moduleAdmin/pages/produitSection/produits-detail/produits-detail.component.html
+++ b/src/app/moduleAdmin/pages/produitSection/produits-detail/produits-detail.component.html
@@ -11,7 +11,8 @@
         </li>
       </ul>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start mx-5 mt-5">
-        <button routerLink="/admin/products" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Retour</button>
+        <button routerLink="/admin/products" type="button" class="btn btn-secondary btn-lg px-4 me-md-2">Retour</button>
+        <button routerLink="/admin/products/modify/{{produit.id}}" type="button" class="btn btn-info btn-lg px-4 me-md-2">Modifier</button>
       </div>
     </div>
   </div>
