Presentation de la page Find Store est fini

--- a/src/app/pages/findStore-lion/store-carte/store-carte.component.html
+++ b/src/app/pages/findStore-lion/store-carte/store-carte.component.html
@@ -1,62 +1,4 @@
-<div *ngIf="magasin">
-    <div class="container">
-        <div class="col-12">
-
-            <div class="row">
-                <h2><strong>{{magasin.address.address}}</strong></h2>
-            </div>
-
-            
-            <div class="row">
-                <div class="col">
-                    <label>Address:</label>
-                </div>
-                <div class="col">
-                    <label>{{magasin.address.postalCode}}, {{magasin.address.city}}</label>
-                </div>
-            </div>
-
-            
-            <div class="row">
-                <div class="col">
-                    <label>City:</label>
-                </div>
-            
-                <div class="col">
-                    <label>{{magasin.address.province}}, {{magasin.address.country}}</label>
-                </div>
-            </div>
-
-            
-            <div class="row">
-                <div class="col">
-                    <label>Phone:</label>
-                </div>
-
-                <div class="col">
-                    <label>{{magasin.telephone}}</label>
-                </div>
-            </div>
-
-            
-            <div class="row">
-                <div class="col">
-                    <label>Email:</label>
-                </div>
-                <div class="col">
-                    <label>{{magasin.email}}</label>
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="col">
-                    <label>Manager:</label>
-                </div>
-                <div class="col">
-                    <label>{{magasin.manager}}</label>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
+<section class="listing">
+    <h3 class="listing-heading">{{magasinInput.address.address}}</h3>
+    <label>Phone: {{magasinInput.telephone}}</label>
+</section>
