--- a/src/app/pages/findStore-lion/find-store/find-store.component.css
+++ b/src/app/pages/findStore-lion/find-store/find-store.component.css
@@ -30,4 +30,15 @@
 }
 .btn{
     border-radius: 0;
+    font-weight: bold;
+}
+.storeCard{
+    display: grid;
+    column-gap: 14px;
+    row-gap: 14px;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 400px));
+    margin-top: 50px;
+    justify-content: space-around;
+    
+    
 }
