--- a/src/app/pages/findStore-lion/find-store/find-store.component.html
+++ b/src/app/pages/findStore-lion/find-store/find-store.component.html
@@ -2,6 +2,7 @@
     <div class="row g-0">
         <img src="assets/images/findStore/findStoreMap.jpg" class="store-map">
     </div>
+
     <div id="divH" class="row g-0 d-flex justify-content-center">
         <h1 id="find">Find a store</h1>
     </div>
@@ -11,9 +12,16 @@
             <div class="input-group mb-3">
                 <input placeholder="Search here" class="form-control" type="text">
                 <button class="btn btn-primary">FIND</button>
-            </div>
+            </div> 
         </div>
     </div>
 
-    <div>CARDS WITH STORE INFO</div>
+    <section class="storeCard">
+        <app-store-carte
+        *ngFor="let i of storeList"
+        [magasinInput] = "i"
+        ></app-store-carte>
+    </section>
+
+    
 </div>
