--- a/src/app/pages/support-lion/support-lion.component.html
+++ b/src/app/pages/support-lion/support-lion.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div id="imgContainer" class="container">
     <div class="row">
         <div class="col-xs-12">
             <img src="assets/images/support/support.jpg" class="support-image">
